fix: attempt to fix mobile layout issues

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -62,3 +62,13 @@ p,
 span {
 	font-size: 18px;
 }
+
+.GitHubPresenceCard {
+	width: 33.3%;
+}
+
+@media only screen and (max-width: 760px) {
+	.GitHubPresenceCard {
+		width: 100%;
+	}
+}
